--- a/tech-test/src/styles.scss
+++ b/tech-test/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: calc(100% - 20px); }
+body {
+  margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: gainsboro;
+}
