feat:todo template

--- a/tech-test/src/app/app.component.scss
+++ b/tech-test/src/app/app.component.scss
@@ -4,4 +4,10 @@
   color: #20364b;
   font-weight: 600;
   font-family: 'ProximaNova', sans-serif;
+  text-align: center;
+}
+.container{
+  display: grid;
+  margin: auto;
+  max-width: 70%;
 }
