--- a/tech-test/src/app/app.component.html
+++ b/tech-test/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1 class="title-text">welcome to angular 8 Origin technical test: {{title}}</h1>
+<h1 class="title-text">{{title}}</h1>
+<div class="container">
+    <app-todo></app-todo>
+</div>
 
